@@ -1,3 +1,8 @@
+2016-09-05  Peter Stephenson  <p.w.stephenson@ntlworld.com>
+
+	* Teubel György: 39167: Src/init.c, Doc/Zsh/params.yo: Make $ENV
+	more like POSIX.
+
 2016-09-04  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* unposted: Src/Zle/comp.h, Src/Zle/complete.c: internals:
